# pyspark-performance-toolkit

./: CHANGELOG.md  README.md  pyproject.toml
docs/: usage.md  v0.2-roadmap.md
examples/: sample_config.json  sample_workload.json
src/sparkscope/: analyzer.py  cli.py  findings.py  models.py  workload.py  workload_analyzer.py
src/sparkscope/rules/: aqe.py  executor.py  joins.py  partitions.py
tests/: test_analyzer.py  test_cli.py  test_workload.py  test_workload_analyzer.py
