[project]
name = "sparkscope"
version = "0.2.0"
description = "Open-source PySpark performance analysis toolkit"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Vincent Kanka" }
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0"
]

[project.scripts]
sparkscope = "sparkscope.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]